tests/errors/preprocessor/incorrect/after_ident_must_be_space_4.c
#define ABC

int main ()
{
	return 0;
}